@@ -356,3 +356,4 @@ Change list for PernMangband
 - lv-req is now based on both item's quality and depth.
 - User commands: /dispose(dis), /tag  Admin commands: /id, /geno
 - Shopkeepers beat down prices for items with high lv-req.
+- Fixed bug in steal-fury ('neutral' was handled as a party).
